<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/icon_dashboard"
            android:title="@string/menu_dashoboard"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_report_green_data"
            android:icon="@drawable/icon_report_data"
            android:title="@string/menu_report_green_data" />
        <item
            android:id="@+id/nav_data_history"
            android:icon="@drawable/icon_history"
            android:title="@string/menu_data_history" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/icon_notification"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_profile_settings"
            android:icon="@drawable/icon_profile"
            android:title="@string/menu_profile_settings" />
        <item
            android:id="@+id/nav_account_security"
            android:icon="@drawable/icon_account_security"
            android:title="@string/menu_account_security" />
        <item
            android:id="@+id/nav_toc"
            android:icon="@drawable/icon_toc"
            android:title="@string/menu_toc" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_logout" />

    </group>

</menu>