<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_frag_gdpr_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_gdpr_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/fontsize_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_rect_white_alpha_normal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_frag_gdpr_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frag_gdpr_content"
                android:textColor="@color/txtclr_dark_gray"
                android:textSize="@dimen/fontsize_tiny" />

            <TextView
                android:id="@+id/tv_frag_gdpr_toc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:text="@string/signup_toc"
                android:textColor="@color/blue"
                android:textSize="@dimen/fontsize_tiny" />

            <TextView
                android:id="@+id/tv_frag_gdpr_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_rect_red_selector"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/submit"
                android:textColor="@android:color/white"
                android:textSize="@dimen/fontsize_big" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>