<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_frag_toc_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/toc_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/fontsize_normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="@drawable/round_rect_white_alpha_normal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_frag_toc_main_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/toc_content"
                android:lineSpacingMultiplier="1.5"
                android:textColor="@color/txtclr_darker_gray"
                android:textSize="@dimen/fontsize_extra_tiny" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_frag_toc_main_gdpr_rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_rect_green_selector"
        android:padding="5dp"
        android:text="@string/toc_gdpr_rights"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/fontsize_normal" />
</LinearLayout>