<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#AA000000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="@dimen/hor_margin_main_content_sign"
        android:paddingEnd="@dimen/hor_margin_main_content_sign">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:background="@drawable/oval_white"
                android:src="@drawable/logo_1" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center|bottom"
>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_frag_reset_pwd_enter_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_pwd"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fontsize_big"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/ed_frag_reset_pwd_enter_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/round_rect_dark_white_normal"
                    android:gravity="center_horizontal"
                    android:hint="@string/registered_email_address"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="@dimen/fontsize_tiny" />

                <TextView
                    android:id="@+id/tv_frag_reset_pwd_enter_email_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/round_rect_red_selector"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fontsize_big" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_frag_reset_pwd_enter_email_login_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fontsize_super_tiny" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_frag_reset_pwd_enter_email_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/signin_create_account"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/fontsize_super_tiny" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>